--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
 
-    <video playsinline autoplay muted loop>
+    <!-- <video playsinline autoplay muted loop>
       
       <source src="video/baja/Nieve_1.mp4" type="video/mp4">
       Tu navegador no soporta el elemento de video.
     
-    </video>
+    </video> -->
   
   <header>
     <h1>Desarrollo Web IDAD</h1>
