--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portada</title>
+  <link rel="shortcut icon" href="imgs/icono_web.png" type="image/x-icon" >
   <link rel="stylesheet" href="style/style.css">
+  <meta name="description" content="Portada. Esto es un gestor web para las tareas de idad, tambien facilita la revision de los trabajos">
 </head>
 
 <body>
 
-    <!-- <video playsinline autoplay muted loop>
-      
-      <source src="video/baja/Nieve_1.mp4" type="video/mp4">
-      Tu navegador no soporta el elemento de video.
-    
-    </video> -->
+
   
   <header>
     <h1>Desarrollo Web IDAD</h1>
