--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <footer>
     <h3>Ddesarrollado por Angel Davila</h3>
-    <p>Todos los derechos Resevados &copy;</p>
+    <p>Todos los derechos Reservados &copy;</p>
   </footer>
 
 </body>
