--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   
   <header>
-    <h1>Desarrollo Web IDAD</h1>
+    <h1>Desarrollo Web Idat</h1>
   </header>
 
   <div class="tarea-container">
