--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h2 class="text">Tarea 3</h2>
       <p>Nuevas Etiquetas HTML5 Y Reglas CSS3.</p>
     </a>
-    <a href="tareas/5/index_4_v2.html" class="tarea__botones">
+    <a href="tareas/5/index.html" class="tarea__botones">
       <h2 class="text">Tarea 4</h2>
       <p>Web Responsive</p>
     </a>
