--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <p>Formulario Responsive</p>
     </a>
 
-    <a href="#" class="tarea__botones">
+    <a href="tareas/03_curso_css_html/index.html" class="tarea__botones">
       <h2 class="text">Tarea 7</h2>
       <p>Por definir</p>
     </a>
