--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
     <a href="tareas/03_curso_css_html/index.html" class="tarea__botones">
       <h2 class="text">Tarea 7</h2>
-      <p>Por definir</p>
+      <p>Tabla</p>
     </a>
 
-    <a href="#" class="tarea__botones">
+    <a href="tareas/final/index.html" class="tarea__botones">
       <h2 class="text">Tarea 8</h2>
-      <p>Por definir</p>
+      <p>Arquitectura</p>
     </a>
 
     <a href="#" class="tarea__botones">
