--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <p>Arquitectura</p>
     </a>
 
-    <a href="#" class="tarea__botones">
+    <a href="tareas/08_menu_ambur/index.html" class="tarea__botones">
       <h2 class="text">Tarea 9</h2>
-      <p>Por definir</p>
+      <p>menu amburguesa</p>
     </a>
 
     <a href="#" class="tarea__botones">
