--- a/tareas/08_menu_ambur/index.html
+++ b/tareas/08_menu_ambur/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
 
 </head>   
+<body>
+    
+
     <header class="header" id="inicio">
         <nav class="nav">
             <div class="margin sub-nav">
@@ -91,10 +94,10 @@
     </main>
     <footer class="container-footer">
             <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100009699127720&locale=es_LA"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/angel0xyz_/"><i class="fa-brands fa-square-instagram"></i></a>
     </footer>
-<body>
+
 </body>
 <script src="https://kit.fontawesome.com/c4d649eaa3.js" crossorigin="anonymous"></script>
 
