--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <p>menu amburguesa</p>
     </a>
 
-    <a href="#" class="tarea__botones">
+    <a href="tareas/09_galeria_videos/index.html" class="tarea__botones">
       <h2 class="text">Tarea 10</h2>
-      <p>Por definir</p>
+      <p>Multimedia</p>
     </a>
 
     <a href="#" class="tarea__botones">
