nueva_web-boostr

--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
       <p>Multimedia</p>
     </a>
 
-    <a href="#" class="tarea__botones">
+    <a href="tareas/10_boostrap/index.html" class="tarea__botones">
       <h2 class="text">Tarea 11</h2>
-      <p>Por definir</p>
+      <p>Boostrap</p>
     </a>
+    <a href="tareas/10_boostrap/index.html" class="tarea__botones">
+      <h2 class="text">Tarea 12</h2>
+      <p>por definir</p>
+    </a>
+
 
 
   </div>
