--- a/tareas/10_boostrap/index.html
+++ b/tareas/10_boostrap/index.html
@@ -64,8 +64,8 @@
             <article class="row gap-0 row-gap-3">
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 p-3">
-                        <img src="img/dispo01.png" class="figure-img img-fluid s" alt="">
-                        <h4 class="text-center">SAMBUNG</h4>
+                        <img src="img/dispo01.png" class="figure-img img-fluid " alt="">
+                        <h4 class="text-center">SAMSUNG</h4>
                         <hr>
                         <p class="text-center text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Inventore ullam nihil debitis quisquam rerum ipsa minima dolorem placeat voluptatem sint.
@@ -74,8 +74,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 p-3">
-                        <img src="img/dispo02.png" class="figure-img img-fluid s" alt="">
-                        <h4 class="text-center">SAMBUNG</h4>
+                        <img src="img/dispo02.png" class="figure-img img-fluid " alt="">
+                        <h4 class="text-center">SAMSUNG</h4>
                         <hr>
                         <p class="text-center text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Inventore ullam nihil debitis quisquam rerum ipsa minima dolorem placeat voluptatem sint.
@@ -84,8 +84,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="card  h-100 p-3">
-                        <img src="img/dispo03.png" class="figure-img img-fluid s" alt="">
-                        <h4 class="text-center">SAMBUNG</h4>
+                        <img src="img/dispo03.png" class="figure-img img-fluid " alt="">
+                        <h4 class="text-center">SAMSUNG</h4>
                         <hr>
                         <p class="text-center text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Inventore ullam nihil debitis quisquam rerum ipsa minima dolorem placeat voluptatem sint.
@@ -94,8 +94,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 p-3">
-                        <img src="img/dispo04.png" class="figure-img img-fluid s" alt="">
-                        <h4 class="text-center">SAMBUNG</h4>
+                        <img src="img/dispo04.png" class="figure-img img-fluid " alt="">
+                        <h4 class="text-center">SAMSUNG</h4>
                         <hr>
                         <p class="text-center text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Inventore ullam nihil debitis quisquam rerum ipsa minima dolorem placeat voluptatem sint.
