--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 
 <head>
   <meta charset="UTF-8">
@@ -79,6 +79,10 @@
     <a href="tareas/10_boostrap/index.html" class="tarea__botones">
       <h2 class="text">Tarea 12</h2>
       <p>por definir</p>
+    </a>
+    <a href="tareas/11_bootstrap-2/index.html" class="tarea__botones">
+      <h2 class="text">Tarea 12</h2>
+      <p>Libros</p>
     </a>
 
 
