examen-final_js_jquery

--- a/index.html
+++ b/index.html
@@ -81,10 +81,18 @@
       <p>por definir</p>
     </a>
     <a href="tareas/11_bootstrap-2/index.html" class="tarea__botones">
-      <h2 class="text">Tarea 12</h2>
+      <h2 class="text">Tarea 13</h2>
       <p>Libros</p>
     </a>
 
+    <a href="tareas/12_javaScript_dental/index.html" class="tarea__botones">
+      <h2 class="text">Tarea 14</h2>
+      <p>Dental</p>
+    </a>
+    <a href="tareas/13_examen_final_js_/index.html" class="tarea__botones">
+      <h2 class="text">Tarea 15</h2>
+      <p>Examen javaScript y Jquery</p>
+    </a>
 
 
   </div>
